partiql/tests/snapshots/pretty__pretty_select_value_tuple_ctor.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT VALUE {'a':v.a, 'b':v.b} FROM [{'a':1, 'b':1}, {'a':2, 'b':2}] AS v
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT VALUE { 'a': v.a, 'b': v.b } FROM [ { 'a': 1, 'b': 1 }, { 'a': 2, 'b': 2 } ] AS v

------------------------------------------------------------------------------------------------------------------------
SELECT VALUE { 'a': v.a, 'b': v.b } FROM [ { 'a': 1, 'b': 1 }, { 'a': 2, 'b': 2 } ] AS v

--------------------------------------------------------------------------------
SELECT VALUE { 'a': v.a, 'b': v.b } FROM [
    { 'a': 1, 'b': 1 },
    { 'a': 2, 'b': 2 }
  ] AS v

----------------------------------------
SELECT VALUE { 'a': v.a, 'b': v.b }
FROM [
    { 'a': 1, 'b': 1 },
    { 'a': 2, 'b': 2 }
  ] AS v

------------------------------
SELECT VALUE {
    'a': v.a,
    'b': v.b
  }
FROM [
    { 'a': 1, 'b': 1 },
    { 'a': 2, 'b': 2 }
  ] AS v

--------------------
SELECT VALUE {
    'a': v.a,
    'b': v.b
  }
FROM [
    {
      'a': 1,
      'b': 1
    },
    {
      'a': 2,
      'b': 2
    }
  ] AS v

----------
SELECT VALUE {
    'a': v.a,
    'b': v.b
  }
FROM [
    {
      'a': 1,
      'b': 1
    },
    {
      'a': 2,
      'b': 2
    }
  ] AS v
