partiql/tests/snapshots/pretty__pretty_typed_lits2.snap
---
source: partiql-ast/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
TIME (3) WITH TIME ZONE '12:59:31'
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
TIME( 3 ) WITH TIME ZONE '12:59:31'

------------------------------------------------------------------------------------------------------------------------
TIME( 3 ) WITH TIME ZONE '12:59:31'

--------------------------------------------------------------------------------
TIME( 3 ) WITH TIME ZONE '12:59:31'

----------------------------------------
TIME( 3 ) WITH TIME ZONE '12:59:31'

------------------------------
TIME( 3 ) WITH TIME ZONE '12:59:31'

--------------------
TIME( 3 ) WITH TIME ZONE '12:59:31'

----------
TIME( 3 ) WITH TIME ZONE '12:59:31'
