partiql/tests/snapshots/pretty__pretty_val.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
{
  'foo': true,
  '-foo': false,
  'bar': 42,
  'baz': 3.14,
  'qux': 'string',
  'thud': NULL,
  'plugh': [
    1,
    2,
    999.876,
    299800000,
    DATE '2020-01-01',
    TIME '1:02:03.004005006',
    TIME WITH TIME ZONE '1:02:03.004005006 +00:00:00',
    TIMESTAMP '2020-01-01 0:00:00.0',
    TIMESTAMP WITH TIME ZONE '2020-01-01 0:00:00.0 +00:00:00',
    'abcdef',
    MISSING
  ],
  'xyzzy': << { 'n': 1 }, { 'n': 2 }, { 'n': 3 }, { 'n': 4 }, { 'n': 5 }, { 'n': 6 }, { 'n': 7 }, { 'n': 8 }, { 'n': 9 }, { 'n': 10 } >>,
  'waldo': [ 1, 2, 'skip a few', 99, 100 ]
}

------------------------------------------------------------------------------------------------------------------------
{
  'foo': true,
  '-foo': false,
  'bar': 42,
  'baz': 3.14,
  'qux': 'string',
  'thud': NULL,
  'plugh': [
    1,
    2,
    999.876,
    299800000,
    DATE '2020-01-01',
    TIME '1:02:03.004005006',
    TIME WITH TIME ZONE '1:02:03.004005006 +00:00:00',
    TIMESTAMP '2020-01-01 0:00:00.0',
    TIMESTAMP WITH TIME ZONE '2020-01-01 0:00:00.0 +00:00:00',
    'abcdef',
    MISSING
  ],
  'xyzzy': <<
    { 'n': 1 },
    { 'n': 2 },
    { 'n': 3 },
    { 'n': 4 },
    { 'n': 5 },
    { 'n': 6 },
    { 'n': 7 },
    { 'n': 8 },
    { 'n': 9 },
    { 'n': 10 }
  >>,
  'waldo': [ 1, 2, 'skip a few', 99, 100 ]
}

--------------------------------------------------------------------------------
{
  'foo': true,
  '-foo': false,
  'bar': 42,
  'baz': 3.14,
  'qux': 'string',
  'thud': NULL,
  'plugh': [
    1,
    2,
    999.876,
    299800000,
    DATE '2020-01-01',
    TIME '1:02:03.004005006',
    TIME WITH TIME ZONE '1:02:03.004005006 +00:00:00',
    TIMESTAMP '2020-01-01 0:00:00.0',
    TIMESTAMP WITH TIME ZONE '2020-01-01 0:00:00.0 +00:00:00',
    'abcdef',
    MISSING
  ],
  'xyzzy': <<
    { 'n': 1 },
    { 'n': 2 },
    { 'n': 3 },
    { 'n': 4 },
    { 'n': 5 },
    { 'n': 6 },
    { 'n': 7 },
    { 'n': 8 },
    { 'n': 9 },
    { 'n': 10 }
  >>,
  'waldo': [ 1, 2, 'skip a few', 99, 100 ]
}

----------------------------------------
{
  'foo': true,
  '-foo': false,
  'bar': 42,
  'baz': 3.14,
  'qux': 'string',
  'thud': NULL,
  'plugh': [
    1,
    2,
    999.876,
    299800000,
    DATE '2020-01-01',
    TIME '1:02:03.004005006',
    TIME WITH TIME ZONE '1:02:03.004005006 +00:00:00',
    TIMESTAMP '2020-01-01 0:00:00.0',
    TIMESTAMP WITH TIME ZONE '2020-01-01 0:00:00.0 +00:00:00',
    'abcdef',
    MISSING
  ],
  'xyzzy': <<
    { 'n': 1 },
    { 'n': 2 },
    { 'n': 3 },
    { 'n': 4 },
    { 'n': 5 },
    { 'n': 6 },
    { 'n': 7 },
    { 'n': 8 },
    { 'n': 9 },
    { 'n': 10 }
  >>,
  'waldo': [
    1,
    2,
    'skip a few',
    99,
    100
  ]
}

------------------------------
{
  'foo': true,
  '-foo': false,
  'bar': 42,
  'baz': 3.14,
  'qux': 'string',
  'thud': NULL,
  'plugh': [
    1,
    2,
    999.876,
    299800000,
    DATE '2020-01-01',
    TIME '1:02:03.004005006',
    TIME WITH TIME ZONE '1:02:03.004005006 +00:00:00',
    TIMESTAMP '2020-01-01 0:00:00.0',
    TIMESTAMP WITH TIME ZONE '2020-01-01 0:00:00.0 +00:00:00',
    'abcdef',
    MISSING
  ],
  'xyzzy': <<
    { 'n': 1 },
    { 'n': 2 },
    { 'n': 3 },
    { 'n': 4 },
    { 'n': 5 },
    { 'n': 6 },
    { 'n': 7 },
    { 'n': 8 },
    { 'n': 9 },
    { 'n': 10 }
  >>,
  'waldo': [
    1,
    2,
    'skip a few',
    99,
    100
  ]
}

--------------------
{
  'foo': true,
  '-foo': false,
  'bar': 42,
  'baz': 3.14,
  'qux': 'string',
  'thud': NULL,
  'plugh': [
    1,
    2,
    999.876,
    299800000,
    DATE '2020-01-01',
    TIME '1:02:03.004005006',
    TIME WITH TIME ZONE '1:02:03.004005006 +00:00:00',
    TIMESTAMP '2020-01-01 0:00:00.0',
    TIMESTAMP WITH TIME ZONE '2020-01-01 0:00:00.0 +00:00:00',
    'abcdef',
    MISSING
  ],
  'xyzzy': <<
    { 'n': 1 },
    { 'n': 2 },
    { 'n': 3 },
    { 'n': 4 },
    { 'n': 5 },
    { 'n': 6 },
    { 'n': 7 },
    { 'n': 8 },
    { 'n': 9 },
    { 'n': 10 }
  >>,
  'waldo': [
    1,
    2,
    'skip a few',
    99,
    100
  ]
}

----------
{
  'foo': true,
  '-foo': false,
  'bar': 42,
  'baz': 3.14,
  'qux': 'string',
  'thud': NULL,
  'plugh': [
    1,
    2,
    999.876,
    299800000,
    DATE '2020-01-01',
    TIME '1:02:03.004005006',
    TIME WITH TIME ZONE '1:02:03.004005006 +00:00:00',
    TIMESTAMP '2020-01-01 0:00:00.0',
    TIMESTAMP WITH TIME ZONE '2020-01-01 0:00:00.0 +00:00:00',
    'abcdef',
    MISSING
  ],
  'xyzzy': <<
    {
      'n': 1
    },
    {
      'n': 2
    },
    {
      'n': 3
    },
    {
      'n': 4
    },
    {
      'n': 5
    },
    {
      'n': 6
    },
    {
      'n': 7
    },
    {
      'n': 8
    },
    {
      'n': 9
    },
    {
      'n': 10
    }
  >>,
  'waldo': [
    1,
    2,
    'skip a few',
    99,
    100
  ]
}
